chart fix on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -425,4 +425,8 @@ input[type=number]::-webkit-outer-spin-button {
   display:flex;
   align-items:center;
   justify-content:center;
+  position:relative;
+  width:70%;
+  height:70%;
+  margin-top:20px;
 }
